chore : sercurity config edit